# Page_Analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: my-check.yml
page_analyzer/: __init__.py  app.py  db.py  html_parse.py  validator.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  url_id.html  urls.html
